# door-control

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: android-deploy.yml  api-deploy.yml
api/access/: index.mts  package.json
api/info/: package.json
device/: .gitignore  CMakeLists.txt  rp2040.cfg
device/src/: ble.c  btstack_config.h  crypto.c  crypto.h  device.c  device.h  doorctl.gatt  driver.c  driver.h  error.h  main.c  math.h  mbedtls_config.h  pka.in.h
mobile/: package-lock.json  package.json
mobile/src/: App.vue
mobile/src-tauri/: tauri.conf.json
mobile/src-tauri/icons/: icon.icns
mobile/src/style/: global.scss
src/: crypto.c
